--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "useTabs": true,
     "semi":true,
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "printWidth": 160
 }
