--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"doc": "doc"
 	},
 	"dependencies": {
-		"@tosee/misc": "^2.3.7",
+		"@tosee/misc": "^3.0.1",
 		"cross-env": "^5.2.0",
 		"ts-node": "^7.0.1",
 		"typescript": "^3.4.3"
@@ -22,11 +22,27 @@
 		"@types/supertest": "^2.0.6",
 		"alsatian": "^2.4.0",
 		"husky": "^1.1.4",
+		"nyc": "^14.0.0",
 		"prettier": "^1.15.2",
 		"pretty-quick": "^1.8.0",
-		"supertest": "^3.3.0"
+		"supertest": "^3.3.0",
+		"tap": "^13.1.0",
+		"tap-dot": "^2.0.0"
+	},
+	"nyc": {
+		"include": [
+			"src/**/*.ts"
+		],
+		"extension": [
+			".ts"
+		],
+		"require": [
+			"ts-node/register"
+		],
+		"all": true
 	},
 	"scripts": {
+		"coverage": "nyc --reporter=lcov --reporter=html npm test&&nyc report",
 		"dev": "cross-env NODE_ENV=development node index.js",
 		"test": "cross-env NODE_ENV=development alsatian ./src/__tests__/*.spec.ts"
 	},
