--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 	"dependencies": {
 		"@tosee/misc": "^3.0.1",
 		"cross-env": "^5.2.0",
-		"ts-node": "^7.0.1",
 		"typescript": "^3.4.3"
 	},
 	"husky": {
@@ -18,31 +17,24 @@
 		}
 	},
 	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "^0.1.3",
 		"@types/jest": "^23.3.9",
 		"@types/supertest": "^2.0.6",
-		"alsatian": "^2.4.0",
+		"alsatian": "^3.0.0",
 		"husky": "^1.1.4",
-		"nyc": "^14.0.0",
+		"nyc": "^14.1.1",
 		"prettier": "^1.15.2",
 		"pretty-quick": "^1.8.0",
+		"source-map-support": "^0.5.13",
 		"supertest": "^3.3.0",
-		"tap": "^13.1.0",
-		"tap-dot": "^2.0.0"
+		"ts-node": "^7.0.1"
 	},
 	"nyc": {
-		"include": [
-			"src/**/*.ts"
-		],
-		"extension": [
-			".ts"
-		],
-		"require": [
-			"ts-node/register"
-		],
+		"extends": "@istanbuljs/nyc-config-typescript",
 		"all": true
 	},
 	"scripts": {
-		"coverage": "nyc --reporter=lcov --reporter=html npm test&&nyc report",
+		"coverage": "nyc --reporter=lcov --reporter=html npm run test && nyc report",
 		"dev": "cross-env NODE_ENV=development node index.js",
 		"test": "cross-env NODE_ENV=development alsatian ./src/__tests__/*.spec.ts"
 	},
