--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"doc": "doc"
 	},
 	"dependencies": {
-		"@tosee/misc": "^3.0.1",
-		"cross-env": "^5.2.0",
-		"typescript": "^3.4.3"
+		"@tosee/config": "^1.0.5",
+		"@tosee/misc": "^4.0.1",
+		"@tosee/util": "^1.0.3",
+		"cross-env": "^5.2.1",
+		"typescript": "^3.8.3"
 	},
 	"husky": {
 		"hooks": {
@@ -18,15 +20,15 @@
 	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^0.1.3",
-		"@types/jest": "^23.3.9",
-		"@types/supertest": "^2.0.6",
-		"alsatian": "^3.0.0",
-		"husky": "^1.1.4",
+		"@types/jest": "^23.3.14",
+		"@types/supertest": "^2.0.9",
+		"alsatian": "^3.2.1",
+		"husky": "^1.3.1",
 		"nyc": "^14.1.1",
-		"prettier": "^1.15.2",
-		"pretty-quick": "^1.8.0",
-		"source-map-support": "^0.5.13",
-		"supertest": "^3.3.0",
+		"prettier": "^1.19.1",
+		"pretty-quick": "^1.11.1",
+		"source-map-support": "^0.5.19",
+		"supertest": "^3.4.2",
 		"ts-node": "^7.0.1"
 	},
 	"nyc": {
