--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"doc": "doc"
 	},
 	"dependencies": {
+		"@tosee/busboy": "^1.0.1",
 		"@tosee/config": "^1.0.5",
-		"@tosee/misc": "^4.0.1",
+		"@tosee/misc": "^4.1.0",
 		"@tosee/util": "^1.0.3",
 		"cross-env": "^5.2.1",
 		"typescript": "^3.8.3"
