--- a/package.json
+++ b/package.json
@@ -8,24 +8,18 @@
 	},
 	"dependencies": {
 		"@tosee/busboy": "^1.0.1",
-		"@tosee/config": "^1.0.5",
-		"@tosee/misc": "^4.1.4",
-		"@tosee/util": "^1.0.3",
+		"@tosee/config": "^1.0.6",
+		"@tosee/misc": "^4.4.0",
+		"@tosee/util": "^1.0.9",
 		"cross-env": "^5.2.1",
-		"typescript": "^3.9.7"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "pretty-quick --staged"
-		}
+		"typescript": "^4.2.4"
 	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^0.1.3",
 		"@types/jest": "^23.3.14",
 		"@types/supertest": "^2.0.10",
 		"alsatian": "^3.2.1",
-		"husky": "^1.3.1",
-		"nyc": "^14.1.1",
+		"nyc": "^15.1.0",
 		"prettier": "^1.19.1",
 		"pretty-quick": "^1.11.1",
 		"source-map-support": "^0.5.19",
@@ -38,7 +32,7 @@
 	},
 	"scripts": {
 		"coverage": "nyc --reporter=lcov --reporter=html npm run test && nyc report",
-		"dev": "cross-env NODE_ENV=development node index.js",
+		"dev": "cross-env NODE_ENV=development node -r ts-node/register src/app.ts",
 		"test": "cross-env NODE_ENV=development alsatian ./src/__tests__/*.spec.ts"
 	},
 	"author": "",
