--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
 		"doc": "doc"
 	},
 	"dependencies": {
-		"@tosee/busboy": "^1.1.0",
+		"@tosee/busboy": "^1.1.2",
 		"@tosee/config": "^1.0.7",
-		"@tosee/misc": "^5.0.2",
-		"@tosee/util": "^1.1.3",
+		"@tosee/misc": "^5.0.3",
+		"@tosee/util": "^1.1.4",
 		"cross-env": "^7.0.3",
-		"typescript": "^4.5.2"
+		"typescript": "^4.7.3"
 	},
 	"devDependencies": {
 		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@types/koa": "^2.13.4",
-		"@types/supertest": "^2.0.11",
+		"@types/node": "^18.0.0",
+		"@types/supertest": "^2.0.12",
 		"alsatian": "^3.2.1",
 		"nyc": "^15.1.0",
-		"prettier": "^2.5.1",
-		"pretty-quick": "^3.1.2",
+		"prettier": "^2.7.0",
+		"pretty-quick": "^3.1.3",
 		"source-map-support": "^0.5.21",
-		"supertest": "^6.1.6",
-		"ts-node": "^10.4.0"
+		"supertest": "^6.2.3",
+		"ts-node": "^10.8.1"
 	},
 	"nyc": {
 		"extends": "@istanbuljs/nyc-config-typescript",
